Use the jakarta bom for api versions
Related to #1991
Related to #1998

Signed-off-by: Scott M Stark <starksm@starkinternational.com>